[metadata]
name = gress
version = 0.0.1
license = Apache License, Version 2.0
long_description = file: README.md
url = url = https://github.com/tgib23/gress
author = Satoshi Yamada
author_email = bigt2323@gmail.com

[options]
packages = find:
install_requires =
    curses-util

[options.extras_require]
develop =
    curses-util


[options.entry_points]
console_scripts =
    gress = gress.gress:main
